# SDRF

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CI_FIXES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  INDEX.md  LICENSE  Makefile  PRODUCTION_READY_AUDIT.md  QUICK_REFERENCE.md  README.md  REPOSITORY_STATUS.md  REPOSITORY_STRUCTURE.txt  SECURITY.md  START_HERE.md  config_manager.py  docker-compose.yml  env.example  exceptions.py  logging_config.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pytest_test.py  setup.py  utils.py  validators.py
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
api/: __init__.py  server.py
cli/: __init__.py  secretctl.py
config/: patterns.json  rotation_policies.yaml
dashboard/: __init__.py  app.py
detectors/: __init__.py  aws_detector.py  azure_detector.py  generic_entropy.py  github_token_detector.py  regex_engine.py
examples/: demo_scan.py
k8s/: deployment.yaml  monitoring.yaml
reporting/: __init__.py  reporter.py
reporting/templates/: report.md.j2  summary.json.j2
rotators/: __init__.py  aws_rotator.py  azure_rotator.py  github_rotator.py
scanners/: __init__.py  commit_history.py  git_scanner.py  github_scanner.py
scripts/: benchmark.py  deploy.sh  health_check.py
tests/: __init__.py  conftest.py  test_config_manager.py  test_regex_engine.py  test_utils.py
